@@ -1,6 +1,8 @@
 2010-10-14 Ingo Renner  <ingo@typo3.org>
 
 	* Increased version to 0.8.0-dev
+	
+	* Added a registry entry to store whether tika is available - which is the case if it is detected to be configured properly
 
 2010-10-13 Ingo Renner  <ingo@typo3.org>
 
